# book_translator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  config.py  layout.py  main.py  pdfgen.py  readme.md  translator.py  vision.py
tests/: __init__.py  test_main.py
